Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/API/C13W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef const char * LPCSTR;
typedef char * LPSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;
typedef int SCHNDX;
C13DRVAPI SCHNDX __stdcall C13_BCSchedFrameStart(ULONG timeval,HCARD handleval);
C13DRVAPI SCHNDX __stdcall C13_BCSchedGap(USHORT gapval,HCARD handleval);
C13DRVAPI SCHNDX __stdcall C13_BCSchedGoto(SCHNDX destindex,HCARD handleval);
C13DRVAPI SCHNDX __stdcall C13_BCSchedHalt(HCARD handleval);
C13DRVAPI SCHNDX __stdcall C13_BCSchedInt(USHORT tagval,HCARD handleval);
C13DRVAPI SCHNDX __stdcall C13_BCSchedIntCond(USHORT condition,USHORT tagval,HCARD handleval);
C13DRVAPI SCHNDX __stdcall C13_BCSchedIntCondEx(USHORT condition1,USHORT condition2,USHORT condition3,USHORT tagval,HCARD handleval);
C13DRVAPI SCHNDX __stdcall C13_BCSchedNop(HCARD handleval);
C13DRVAPI SCHNDX __stdcall C13_BCSchedPause(HCARD handleval);
C13DRVAPI SCHNDX __stdcall C13_BCSchedPulse(HCARD handleval);
C13DRVAPI SCHNDX __stdcall C13_BCSchedPulse0(HCARD handleval);
C13DRVAPI SCHNDX __stdcall C13_BCSchedPulse1(HCARD handleval);
C13DRVAPI SCHNDX __stdcall C13_BCSchedRestart(HCARD handleval);
C13DRVAPI SCHNDX __stdcall C13_BCSchedRetryEx(USHORT condition1,USHORT condition2,USHORT condition3,USHORT retryflag,USHORT retries,HCARD handleval);
C13DRVAPI SCHNDX __stdcall C13_BCSchedReturn(HCARD handleval);
C13DRVAPI SCHNDX __stdcall C13_BCSchedUser(ULONG useraddr,HCARD handleval);
C13DRVAPI SCHNDX __stdcall C13_BCSetEntry(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_BCSetTimeout(USHORT timeoutval,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_BlkAddr(INT taval,HCARD handleval);
C13DRVAPI USHORT __stdcall C13_BlkOptRd(INT taval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_BlkOptWr(USHORT rtopt,INT taval,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_BlkPtrRd(INT taval,HCARD handleval);
C13DRVAPI VOID __stdcall C13_BlkPtrWr(ULONG descaddr,INT taval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_BlkRd(LPUSHORT block,INT taval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_BlkReset(INT taval,HCARD handleval);
C13DRVAPI USHORT __stdcall C13_BlkSWDRd(INT taval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_BlkSWDWr(USHORT swdval,INT taval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_BlkWipe(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_BlkWr(LPUSHORT block,INT taval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CardBoot(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CardCloseAll(VOID);
C13DRVAPI ERRVAL __stdcall C13_CardConfig(BOOL enableflag,USHORT command,USHORT taval,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_CardGetInfo(USHORT infotype,HCARD handleval);
C13DRVAPI LPCSTR __stdcall C13_CardGetInfos(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CardGetParam(LPSTR cardstr,LPINT cardnum,LPINT devnum,LPULONG sizval,LPUSHORT memval,LPUSHORT ioval,LPUSHORT irqval,LPUSHORT spdval,HCARD handleval);
C13DRVAPI VOID __stdcall C13_CardInit(VOID);
C13DRVAPI BOOL __stdcall C13_CardIsRunning(HCARD handleval);
C13DRVAPI HCARD __stdcall C13_CardOpenEx(LPCSTR cardname,INT cardnum);
C13DRVAPI HCARD __stdcall C13_CardOpenExx(LPCSTR cardname,INT cardnum,LPVOID hAppWnd,USHORT uiRemovalMsg);
C13DRVAPI VOID __stdcall C13_CardResetEx(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CardResume(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CardTest(USHORT level,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CardTest0(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CardTest1(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CardTest2(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CardTest3(HCARD handleval);
C13DRVAPI VOID __stdcall C13_CardTrigger(HCARD handleval);
C13DRVAPI VOID __stdcall C13_CDBase(LPUSHORT memval,LPUSHORT ioval,LPUSHORT irqval,LPUSHORT sizval,LPUSHORT spdval,INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CDDeregisterClient(VOID);
C13DRVAPI ERRVAL __stdcall C13_CDMapMem(ULONG offset,INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CDRegisterClient(VOID);
C13DRVAPI ERRVAL __stdcall C13_CDReleaseAll(INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CDReleaseConfig(INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CDReleaseDMA(INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CDReleaseExclusive(INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CDReleaseIO(INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CDReleaseIRQ(INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CDReleaseMem(INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CDRequestAll(INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CDRequestConfig(INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CDRequestDMA(INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CDRequestExclusive(INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CDRequestIO(INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CDRequestIRQ(INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CDRequestMem(INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CDReset(INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CDRestartAll(INT socketval);
C13DRVAPI VOID __stdcall C13_CDVarConfig(ULONG value,USHORT symbol,INT socketval);
C13DRVAPI USHORT __stdcall C13_CDVarCount(INT socketval);
C13DRVAPI VOID __stdcall C13_CDVarDefault(INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CDVarLoad(INT socketval);
C13DRVAPI ULONG __stdcall C13_CDVarQuery(USHORT symbol,INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CDVarRetrieve(USHORT index,INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CEAttributeConfig(INT socketval);
C13DRVAPI VOID __stdcall C13_CEBase(LPUSHORT memval,LPUSHORT ioval,LPUSHORT irqval,LPUSHORT sizval,LPUSHORT spdval,INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CECall(USHORT func,INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CECallEx(USHORT func,INT socketval,LPUSHORT valuewptr,LPULONG valuelptr);
C13DRVAPI ERRVAL __stdcall C13_CECISClose(INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CECISDisable(INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CECISEnable(INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CECISFlush(INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CECISOpen(INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CECISRead(LPUSHORT value,USHORT addr,INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CECISReads(LPUSHORT value,USHORT addr,USHORT count,INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CECISWrite(USHORT value,USHORT addr,INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CECISWrites(LPUSHORT value,USHORT addr,USHORT count,INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CEDeregisterClient(VOID);
C13DRVAPI VOID __stdcall C13_CEErrorClear(VOID);
C13DRVAPI USHORT __stdcall C13_CEErrorCount(VOID);
C13DRVAPI ERRVAL __stdcall C13_CEErrorValue(USHORT index);
C13DRVAPI ERRVAL __stdcall C13_CEFiveVoltConfig(INT socketval);
C13DRVAPI USHORT __stdcall C13_CEFuncID(VOID);
C13DRVAPI ERRVAL __stdcall C13_CEIOAttrConfig(USHORT attrval,INT socketval);