Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/API/C13W32VB.BAS

Public Declare Function C13_BCSchedFrameStart Lib "C13W32.DLL" Alias "_C13_BCSchedFrameStart@8" (ByVal timeval As Long, ByVal handleval As Long) As Long
Public Declare Function C13_BCSchedGap Lib "C13W32.DLL" Alias "_C13_BCSchedGap@8" (ByVal gapval As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_BCSchedGoto Lib "C13W32.DLL" Alias "_C13_BCSchedGoto@8" (ByVal destindex As Long, ByVal handleval As Long) As Long
Public Declare Function C13_BCSchedHalt Lib "C13W32.DLL" Alias "_C13_BCSchedHalt@4" (ByVal handleval As Long) As Long
Public Declare Function C13_BCSchedInt Lib "C13W32.DLL" Alias "_C13_BCSchedInt@8" (ByVal tagval As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_BCSchedIntCond Lib "C13W32.DLL" Alias "_C13_BCSchedIntCond@12" (ByVal condition As Integer, ByVal tagval As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_BCSchedIntCondEx Lib "C13W32.DLL" Alias "_C13_BCSchedIntCondEx@20" (ByVal condition1 As Integer, ByVal condition2 As Integer, ByVal condition3 As Integer, ByVal tagval As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_BCSchedNop Lib "C13W32.DLL" Alias "_C13_BCSchedNop@4" (ByVal handleval As Long) As Long
Public Declare Function C13_BCSchedPause Lib "C13W32.DLL" Alias "_C13_BCSchedPause@4" (ByVal handleval As Long) As Long
Public Declare Function C13_BCSchedPulse Lib "C13W32.DLL" Alias "_C13_BCSchedPulse@4" (ByVal handleval As Long) As Long
Public Declare Function C13_BCSchedPulse0 Lib "C13W32.DLL" Alias "_C13_BCSchedPulse0@4" (ByVal handleval As Long) As Long
Public Declare Function C13_BCSchedPulse1 Lib "C13W32.DLL" Alias "_C13_BCSchedPulse1@4" (ByVal handleval As Long) As Long
Public Declare Function C13_BCSchedRestart Lib "C13W32.DLL" Alias "_C13_BCSchedRestart@4" (ByVal handleval As Long) As Long
Public Declare Function C13_BCSchedRetryEx Lib "C13W32.DLL" Alias "_C13_BCSchedRetryEx@24" (ByVal condition1 As Integer, ByVal condition2 As Integer, ByVal condition3 As Integer, ByVal retryflag As Integer, ByVal retries As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_BCSchedReturn Lib "C13W32.DLL" Alias "_C13_BCSchedReturn@4" (ByVal handleval As Long) As Long
Public Declare Function C13_BCSchedUser Lib "C13W32.DLL" Alias "_C13_BCSchedUser@8" (ByVal useraddr As Long, ByVal handleval As Long) As Long
Public Declare Function C13_BCSetEntry Lib "C13W32.DLL" Alias "_C13_BCSetEntry@4" (ByVal handleval As Long) As Long
Public Declare Function C13_BCSetTimeout Lib "C13W32.DLL" Alias "_C13_BCSetTimeout@8" (ByVal timeoutval As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_BlkAddr Lib "C13W32.DLL" Alias "_C13_BlkAddr@8" (ByVal taval As Long, ByVal handleval As Long) As Long
Public Declare Function C13_BlkOptRd Lib "C13W32.DLL" Alias "_C13_BlkOptRd@8" (ByVal taval As Long, ByVal handleval As Long) As Integer
Public Declare Function C13_BlkOptWr Lib "C13W32.DLL" Alias "_C13_BlkOptWr@12" (ByVal rtopt As Integer, ByVal taval As Long, ByVal handleval As Long) As Long
Public Declare Function C13_BlkPtrRd Lib "C13W32.DLL" Alias "_C13_BlkPtrRd@8" (ByVal taval As Long, ByVal handleval As Long) As Long
Public Declare Function C13_BlkPtrWr Lib "C13W32.DLL" Alias "_C13_BlkPtrWr@12" (ByVal descaddr As Long, ByVal taval As Long, ByVal handleval As Long) As Long
Public Declare Function C13_BlkRd Lib "C13W32.DLL" Alias "_C13_BlkRd@12" (ByRef block As Integer, ByVal taval As Long, ByVal handleval As Long) As Long
Public Declare Function C13_BlkReset Lib "C13W32.DLL" Alias "_C13_BlkReset@8" (ByVal taval As Long, ByVal handleval As Long) As Long
Public Declare Function C13_BlkSWDRd Lib "C13W32.DLL" Alias "_C13_BlkSWDRd@8" (ByVal taval As Long, ByVal handleval As Long) As Integer
Public Declare Function C13_BlkSWDWr Lib "C13W32.DLL" Alias "_C13_BlkSWDWr@12" (ByVal swdval As Integer, ByVal taval As Long, ByVal handleval As Long) As Long
Public Declare Function C13_BlkWipe Lib "C13W32.DLL" Alias "_C13_BlkWipe@4" (ByVal handleval As Long) As Long
Public Declare Function C13_BlkWr Lib "C13W32.DLL" Alias "_C13_BlkWr@12" (ByRef block As Integer, ByVal taval As Long, ByVal handleval As Long) As Long
Public Declare Function C13_CardBoot Lib "C13W32.DLL" Alias "_C13_CardBoot@4" (ByVal handleval As Long) As Long
Public Declare Function C13_CardCloseAll Lib "C13W32.DLL" Alias "_C13_CardCloseAll@0" () As Long
Public Declare Function C13_CardConfig Lib "C13W32.DLL" Alias "_C13_CardConfig@16" (ByVal enableflag As Long, ByVal command As Integer, ByVal taval As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_CardGetInfo Lib "C13W32.DLL" Alias "_C13_CardGetInfo@8" (ByVal infotype As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_CardGetInfos Lib "C13W32.DLL" Alias "_C13_CardGetInfos@4" (ByVal handleval As Long) As Long
Public Declare Function C13_CardGetParam Lib "C13W32.DLL" Alias "_C13_CardGetParam@36" (ByRef cardstr As String, ByRef cardnum As Long, ByRef devnum As Long, ByRef sizval As Long, ByRef memval As Integer, ByRef ioval As Integer, ByRef irqval As Integer, ByRef spdval As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_CardInit Lib "C13W32.DLL" Alias "_C13_CardInit@0" () As Long
Public Declare Function C13_CardIsRunning Lib "C13W32.DLL" Alias "_C13_CardIsRunning@4" (ByVal handleval As Long) As Long
Public Declare Function C13_CardOpenEx Lib "C13W32.DLL" Alias "_C13_CardOpenEx@8" (ByRef cardname As String, ByVal cardnum As Long) As Long
Public Declare Function C13_CardOpenExx Lib "C13W32.DLL" Alias "_C13_CardOpenExx@16" (ByRef cardname As String, ByVal cardnum As Long, ByRef happwnd As Long, ByVal uiremovalmsg As Integer) As Long
Public Declare Function C13_CardResetEx Lib "C13W32.DLL" Alias "_C13_CardResetEx@4" (ByVal handleval As Long) As Long
Public Declare Function C13_CardResume Lib "C13W32.DLL" Alias "_C13_CardResume@4" (ByVal handleval As Long) As Long
Public Declare Function C13_CardTest Lib "C13W32.DLL" Alias "_C13_CardTest@8" (ByVal level As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_CardTest0 Lib "C13W32.DLL" Alias "_C13_CardTest0@4" (ByVal handleval As Long) As Long
Public Declare Function C13_CardTest1 Lib "C13W32.DLL" Alias "_C13_CardTest1@4" (ByVal handleval As Long) As Long
Public Declare Function C13_CardTest2 Lib "C13W32.DLL" Alias "_C13_CardTest2@4" (ByVal handleval As Long) As Long
Public Declare Function C13_CardTest3 Lib "C13W32.DLL" Alias "_C13_CardTest3@4" (ByVal handleval As Long) As Long
Public Declare Function C13_CardTrigger Lib "C13W32.DLL" Alias "_C13_CardTrigger@4" (ByVal handleval As Long) As Long
Public Declare Function C13_CDBase Lib "C13W32.DLL" Alias "" (ByRef memval As Integer, ByRef ioval As Integer, ByRef irqval As Integer, ByRef sizval As Integer, ByRef spdval As Integer, ByVal socketval As Long) As Long
Public Declare Function C13_CDDeregisterClient Lib "C13W32.DLL" Alias "" () As Long
Public Declare Function C13_CDMapMem Lib "C13W32.DLL" Alias "" (ByVal offset As Long, ByVal socketval As Long) As Long
Public Declare Function C13_CDRegisterClient Lib "C13W32.DLL" Alias "" () As Long
Public Declare Function C13_CDReleaseAll Lib "C13W32.DLL" Alias "" (ByVal socketval As Long) As Long
Public Declare Function C13_CDReleaseConfig Lib "C13W32.DLL" Alias "" (ByVal socketval As Long) As Long
Public Declare Function C13_CDReleaseDMA Lib "C13W32.DLL" Alias "" (ByVal socketval As Long) As Long
Public Declare Function C13_CDReleaseExclusive Lib "C13W32.DLL" Alias "" (ByVal socketval As Long) As Long
Public Declare Function C13_CDReleaseIO Lib "C13W32.DLL" Alias "" (ByVal socketval As Long) As Long
Public Declare Function C13_CDReleaseIRQ Lib "C13W32.DLL" Alias "" (ByVal socketval As Long) As Long
Public Declare Function C13_CDReleaseMem Lib "C13W32.DLL" Alias "" (ByVal socketval As Long) As Long
Public Declare Function C13_CDRequestAll Lib "C13W32.DLL" Alias "" (ByVal socketval As Long) As Long
Public Declare Function C13_CDRequestConfig Lib "C13W32.DLL" Alias "" (ByVal socketval As Long) As Long
Public Declare Function C13_CDRequestDMA Lib "C13W32.DLL" Alias "" (ByVal socketval As Long) As Long
Public Declare Function C13_CDRequestExclusive Lib "C13W32.DLL" Alias "" (ByVal socketval As Long) As Long
Public Declare Function C13_CDRequestIO Lib "C13W32.DLL" Alias "" (ByVal socketval As Long) As Long
Public Declare Function C13_CDRequestIRQ Lib "C13W32.DLL" Alias "" (ByVal socketval As Long) As Long
Public Declare Function C13_CDRequestMem Lib "C13W32.DLL" Alias "" (ByVal socketval As Long) As Long
Public Declare Function C13_CDReset Lib "C13W32.DLL" Alias "" (ByVal socketval As Long) As Long
Public Declare Function C13_CDRestartAll Lib "C13W32.DLL" Alias "" (ByVal socketval As Long) As Long
Public Declare Function C13_CDVarConfig Lib "C13W32.DLL" Alias "" (ByVal value As Long, ByVal symbol As Integer, ByVal socketval As Long) As Long
Public Declare Function C13_CDVarCount Lib "C13W32.DLL" Alias "" (ByVal socketval As Long) As Integer
Public Declare Function C13_CDVarDefault Lib "C13W32.DLL" Alias "" (ByVal socketval As Long) As Long
Public Declare Function C13_CDVarLoad Lib "C13W32.DLL" Alias "" (ByVal socketval As Long) As Long
Public Declare Function C13_CDVarQuery Lib "C13W32.DLL" Alias "" (ByVal symbol As Integer, ByVal socketval As Long) As Long
Public Declare Function C13_CDVarRetrieve Lib "C13W32.DLL" Alias "" (ByVal index As Integer, ByVal socketval As Long) As Long
Public Declare Function C13_CEAttributeConfig Lib "C13W32.DLL" Alias "" (ByVal socketval As Long) As Long
Public Declare Function C13_CEBase Lib "C13W32.DLL" Alias "" (ByRef memval As Integer, ByRef ioval As Integer, ByRef irqval As Integer, ByRef sizval As Integer, ByRef spdval As Integer, ByVal socketval As Long) As Long
Public Declare Function C13_CECall Lib "C13W32.DLL" Alias "" (ByVal func As Integer, ByVal socketval As Long) As Long
Public Declare Function C13_CECallEx Lib "C13W32.DLL" Alias "" (ByVal func As Integer, ByVal socketval As Long, ByRef valuewptr As Integer, ByRef valuelptr As Long) As Long
Public Declare Function C13_CECISClose Lib "C13W32.DLL" Alias "" (ByVal socketval As Long) As Long
Public Declare Function C13_CECISDisable Lib "C13W32.DLL" Alias "" (ByVal socketval As Long) As Long
Public Declare Function C13_CECISEnable Lib "C13W32.DLL" Alias "" (ByVal socketval As Long) As Long
Public Declare Function C13_CECISFlush Lib "C13W32.DLL" Alias "" (ByVal socketval As Long) As Long
Public Declare Function C13_CECISOpen Lib "C13W32.DLL" Alias "" (ByVal socketval As Long) As Long
Public Declare Function C13_CECISRead Lib "C13W32.DLL" Alias "" (ByRef value As Integer, ByVal addr As Integer, ByVal socketval As Long) As Long
Public Declare Function C13_CECISReads Lib "C13W32.DLL" Alias "" (ByRef value As Integer, ByVal addr As Integer, ByVal count As Integer, ByVal socketval As Long) As Long
Public Declare Function C13_CECISWrite Lib "C13W32.DLL" Alias "" (ByVal value As Integer, ByVal addr As Integer, ByVal socketval As Long) As Long
Public Declare Function C13_CECISWrites Lib "C13W32.DLL" Alias "" (ByRef value As Integer, ByVal addr As Integer, ByVal count As Integer, ByVal socketval As Long) As Long
Public Declare Function C13_CEDeregisterClient Lib "C13W32.DLL" Alias "" () As Long
Public Declare Function C13_CEErrorClear Lib "C13W32.DLL" Alias "" () As Long
Public Declare Function C13_CEErrorCount Lib "C13W32.DLL" Alias "" () As Integer
Public Declare Function C13_CEErrorValue Lib "C13W32.DLL" Alias "" (ByVal index As Integer) As Long
Public Declare Function C13_CEFiveVoltConfig Lib "C13W32.DLL" Alias "" (ByVal socketval As Long) As Long
Public Declare Function C13_CEFuncID Lib "C13W32.DLL" Alias "" () As Integer
Public Declare Function C13_CEIOAttrConfig Lib "C13W32.DLL" Alias "" (ByVal attrval As Integer, ByVal socketval As Long) As Long
